--- a/src/App.css
+++ b/src/App.css
@@ -386,3 +386,54 @@ a:hover {
 .wallet_bublic_key_div-title {
   min-width: 3rem;
 }
+.auto_mine_box {
+  width: 82%;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 10px;
+}
+.auto_mine_box > h1 {
+  margin-left: 10px;
+  margin-bottom: 0px;
+}
+.block_box > div:nth-child(1) {
+  display: flex;
+}
+.block_box > div:nth-child(1) > div:nth-child(1) {
+  width: 65px;
+  text-align: end;
+}
+.block_box > div:nth-child(1) > div:nth-child(2) {
+  padding-left: 30px;
+}
+.block_box-block_info li {
+  display: flex;
+  width: 100%;
+  margin: 4px 0px;
+  word-break: break-all;
+}
+.block_box-block_info li b {
+  margin: auto 0px;
+}
+.block_box-block_info li > div:nth-child(1) {
+  display: flex;
+  width: 130px;
+  min-width: 130px;
+  text-align: center;
+  vertical-align: middle;
+}
+.block_box-block_info li > div:nth-child(1) > div:nth-child(1) {
+  width: 100%;
+  text-align: center;
+  margin: auto 0;
+}
+
+.block_box-block_info li > div:nth-child(2) {
+  max-width: 70%;
+}
+.block_box-block_info .boundary_line {
+  margin: 0;
+  background-color: #f0f2f5;
+  height: 1px;
+  border: 0;
+}
