노드 페이지 블록목록 디자인 수정

--- a/src/App.css
+++ b/src/App.css
@@ -396,6 +396,22 @@ a:hover {
   margin-left: 10px;
   margin-bottom: 0px;
 }
+
+.block_box {
+  border: 1px solid transparent;
+  touch-action: manipulation;
+}
+.block_box:hover {
+  border-style: dashed;
+  cursor: pointer;
+  color: #40a9ff;
+  border-color: #40a9ff;
+  transition: all 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
+  transition-property: all;
+  transition-duration: 0.3s;
+  transition-timing-function: cubic-bezier(0.645, 0.045, 0.355, 1);
+  transition-delay: 0s;
+}
 .block_box > div:nth-child(1) {
   display: flex;
 }
